@@ -1,3 +1,6 @@
+Changelog 0.4.20 [20230822]:
+- Readded Consumet Due to bugs
+
 Changelog 0.4.19 [20230821]:
 - The Final Permanent Fix For Audio and Subtitles.
 
